--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: another-gui-plugin
+name: AnotherGUIPlugin
 depend: [ProtocolLib]
 version: '${project.version}'
 main: me.katanya04.anotherguiplugin.AnotherGUIPlugin
